--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/package-lock.json
+/react-app/node_modules
+/react-app/package-lock.json
 /.pnp
 .pnp.js
 
